Fixed header, fixed post spacing

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -676,7 +676,7 @@ footer a:hover {
 }
 
 .post-content {
-
+	line-height: 135%
 }
 
 
